# api_sample

./: Cargo.toml
src/: error.rs  jwt.rs  lib.rs  main.rs
src/handler/: authenticate.rs  error.rs  jwt.rs  mod.rs  product_register.rs  product_search.rs
