[package]
name = "api_sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web   =   { version = "4.2.1", features = ["openssl"] }
serde       =   { version = "1.0.144", features = ["derive"] }
openssl     =   { version = "0.10.41", features = ["v110"] }
sea-orm     =   { version = "0.9.2" , features=["sqlx-postgres" , "runtime-tokio-rustls" , "macros"] , default-features = false}
mime        =   "0.3.16"
env_logger  =   "0.9.0"
log         =   "0.4.17"
anyhow      =   "1.0.65"
thiserror   =   "1.0.35"
async-trait =   "0.1.57"
chrono      =   "0.4.1" # ISO8601に準拠した日付・時間
serde_json  =   "1.0.85"
app_commons = {git = "https://github.com/fullness-MFurukawa/app_commons" , rev="5761ad7315dfebfbfebe977ae6fafbb5badc5bcf" }
